force-app/main/default/objects/Verificacion_Costo_Productos__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Token Enviado</fullName>
            </value>
            <value>
                <fullName>Verificado</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>