force-app/main/default/objects/Verificacion_Costo_Productos__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factory</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Verificacion Costos Productos</relationshipLabel>
    <relationshipName>Verificacion_Costos_Productos</relationshipName>
    <type>Lookup</type>
</CustomField>