force-app/main/default/objects/Verificacion_Costo_Productos__c/fields/New_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Price__c</fullName>
    <description>Precio actualizaddo por la fabrica</description>
    <label>New Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>