force-app/main/default/objects/Verificacion_Costo_Productos__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Verificacion Costos Productos</relationshipLabel>
    <relationshipName>Verificacion_Costos_Productos</relationshipName>
    <type>Lookup</type>
</CustomField>