force-app/main/default/objects/Verificacion_Costo_Productos__c/fields/Verificacion_Costo__c.field-meta.xml
<CustomField>
    <fullName>Verificacion_Costo__c</fullName>
    <label>Verificacion Costo</label>
    <referenceTo>Verificacion_Costo__c</referenceTo>
    <relationshipLabel>Verificacion Costos Productos</relationshipLabel>
    <relationshipName>Verificacion_Costos_Productos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>